2007-04-11  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php, class.scorerender.inc.php:
	Supports restricting maximum length per fragment.

2007-04-11  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	Drop support for configurable markup, people probably don't need that.

=== ScoreRender 0.1.2 ===

2007-03-30  Abel Cheung  <abelcheung@gmail.com>

	* class.*.php: Add +repage option to imagemagick.
	* wp-scorerender.php: Minor string change.

=== ScoreRender 0.1.1 ===

2007-03-14  Abel Cheung  <abelcheung@gmail.com>

	* class.lilypond.inc.php, class.scorerender.inc.php:
	Fix transparency rendering of lilypond fragment.
	* wp-scorerender.php:
	Big fat warning about conflict with "automatical XHTML nesting fix"
	option, instead of removing filter.

=== ScoreRender 0.1 ===

2007-03-13  Abel Cheung  <abelcheung@gmail.com>

	* TODO.txt: Add TODO.

2007-03-11  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	Make error messages more consistent, thus less translation needed.

2007-03-11  Abel Cheung  <abelcheung@gmail.com>

	* class.lilypond.inc.php:
	Turn on safe mode again, and use convert -density option instead.
	* class.mup.inc.php:
	Fix blacklist tags.
	* class.scorerender.inc.php:
	Simplify convert command line.

2007-03-11  Abel Cheung  <abelcheung@gmail.com>

	* README.txt:
	Minor changes.
	* wp-scorerender.php:
	Impl sys_get_temp_dir() for determining temp folder
	automatically. Don't filter through title, because normally
	title contains only one line, which is not quite enough for
	melodies. Minor changes of text within option page.

2007-03-10  Abel Cheung  <abelcheung@gmail.com>

	* README.txt:
	Update.

2007-03-06  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	Also apply filter to title and excerpt.

2007-03-02  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	String and minor layout changes for option page.

2007-03-01  Abel Cheung  <abelcheung@gmail.com>

	* class.scorerender.inc.php: