@@ -1,3 +1,8 @@
+2007-04-13  Abel Cheung  <abelcheung@gmail.com>
+
+	* wp-scorerender.php:
+	Supports restricting number of fragment per comment.
+
 2007-04-11  Abel Cheung  <abelcheung@gmail.com>
 
 	* wp-scorerender.php, class.scorerender.inc.php:
